<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimension"
    android:background="@color/colorFondo"
    tools:context=".PantallaInicio">

    <TextView
        android:id="@+id/Bienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/tv_bienvenida"
        android:textColor="@color/azulTexto"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="88dp"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnAcceder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_acceder"
        android:textSize="18sp"
        android:background="@color/colorBoton"
        android:onClick="acceder"/>

</RelativeLayout>