<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorFondo"
    tools:context="com.dam.seleccionrestaurante_lpr.SeleccionActivity">

    <TextView
        android:id="@+id/tvSeleccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_seleccion"
        android:textColor="@color/azulTexto"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvNomRest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSeleccion"
        android:layout_marginTop="32dp"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llTelf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNomRest"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnLlamar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_llamar"
            android:onClick="llamar" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llTelf"
        android:layout_marginTop="32dp"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnVisitarWeb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWeb"
        android:layout_marginTop="32dp"
        android:text="@string/btn_visitar_web"
        android:onClick="abrirWeb" />

    <TextView
        android:id="@id/tvDistancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnVisitarWeb"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvTiempo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvDistancia"
        android:layout_marginTop="32sp"
        android:textSize="24sp"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_volver"
        android:onClick="volver" />
</RelativeLayout>