<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/colorFondo"
    tools:context="com.dam.seleccionrestaurante_lpr.IndicacionesActivity">

    <TextView
        android:id="@+id/tvIndicaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_indicaciones"
        android:textColor="@color/azulTexto"
        android:textStyle="bold"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnRestaurante1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvIndicaciones"
        android:layout_marginTop="32dp"
        android:onClick="restaurante1"
        android:text="@string/btn_restaurante1"
        android:background="@color/colorBoton"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvNombre1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRestaurante1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/azulTexto"/>

    <TextView
        android:id="@+id/tvTelefono1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNombre1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/azulTexto"/>

    <TextView
        android:id="@+id/tvWeb1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTelefono1"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/azulTexto"/>

    <Button
        android:id="@+id/btnRestaurante2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWeb1"
        android:layout_marginTop="48dp"
        android:onClick="restaurante2"
        android:text="@string/btn_restaurante2"
        android:background="@color/colorBoton"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvNombre2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRestaurante2"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/azulTexto"/>

    <TextView
        android:id="@+id/tvTelefono2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNombre2"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/azulTexto"/>

    <TextView
        android:id="@+id/tvWeb2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTelefono2"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/azulTexto"/>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="mostrarResultado"
        android:text="@string/btn_calcular_selec"
        android:textSize="16sp" />

</RelativeLayout>